--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Sidebar -->
   <aside class="sidebar">
     <div class="logo-section">
-      <img src="images/ksrtc-logo.png" alt="KSRTC Logo">
+      <img src="ksrtc-logo.png" alt="KSRTC Logo">
       <h2>KSRTC Swift</h2>
     </div>
     <nav class="menu">
